Fixed log4j stylesheet. Improved URI resolution for baxterxsl schema.